# cluster

./: .gitignore  .travis.yml  Makefile  Makefile.am  README  configure  configure.ac
bindings/: Makefile.am
bindings/perl/: Makefile.am
bindings/perl/ccs/: CCS.pm.in  META.yml.in  Makefile.am
cman/: Makefile  Makefile.am
cman/cman_tool/: Makefile  Makefile.am  cman_tool.h  join.c  main.c
cman/config/: Makefile  Makefile.am  cman-preconfig.c  cman.h  nodelist.h
cman/daemon/: Makefile  ais.c  barrier.c  cman-preconfig.c  cmanconfig.c  cnxman-private.h  cnxman-socket.h  commands.c  daemon.c  nodelist.h
cman/init.d/: cman.in  cman.init.defaults.in
cman/lib/: libcman.c
cman/man/: Makefile.am  cman.5  cman_tool.8  qdisk.5
cman/notifyd/: Makefile  Makefile.am  cman_notify.in  main.c
cman/qdisk/: Makefile  Makefile.am  bitmap.c  daemon_init.c  disk.c  disk.h  disk_util.c  iostate.c  main.c  mkqdisk.c  proc.c  scandisk.c  score.c
cman/scripts/: Makefile  checkquorum  checkquorum.wdmd
cman/services/: Makefile  Makefile.am
cman/services/cman/: Makefile.am
cman/services/cman/include/: Makefile.am
cman/services/cman/include/corosync/: ipc_cman.h
cman/services/cman/lib/: Makefile  Makefile.am  libcman.c  libcman.h  libcman.pc.in
cman/services/cman/services/: Makefile.am  cman.c
cman/services/quorum/include/corosync/: cmanquorum.h  ipc_cmanquorum.h
cman/services/quorum/lib/: Makefile  libcmanquorum.c
cman/services/quorum/services/: cmanquorum.c
cman/services/quorum/test/: testcmanquorum1.c
cman/tests/: Makefile.am  client.c  libtest.c  qwait.c  sysman.c  sysmand.c  user_service.c
common/: Makefile.am
common/liblogthread/: Makefile.am  liblogthread.c  liblogthread.pc.in
config/: Makefile.am
config/libs/: Makefile.am
config/libs/libccsconfdb/: Makefile.am  extras.c  fullxpath.c  libccs.c  libccs.pc.in  xpathlite.c
config/man/: Makefile.am  cluster.conf.5
config/plugins/: Makefile.am
config/plugins/ldap/: Makefile  Makefile.am  configldap.c
config/plugins/xml/: Makefile  Makefile.am  config.c
config/tools/: Makefile  Makefile.am
config/tools/ccs_tool/: Makefile  Makefile.am  ccs_tool.c  editconf.c  editconf.h
config/tools/ldap/: Makefile  Makefile.am  confdb2ldif.c
config/tools/ldap/rng2ldif/: Makefile  genclass.c  rng2ldif.c  tree.c  value-list.c
config/tools/man/: Makefile.am
config/tools/mkconf/: Makefile  Makefile.am  mkconf.c
config/tools/xml/: ccs_config_dump.c  ccs_update_schema.in  cluster.rng.in  cluster.rng.in.head
contrib/: Makefile
dlm/tool/: Makefile
doc/: COPYRIGHT  Makefile.am  cluster.logrotate.in
fence/: Makefile
fence/fence_check/: Makefile  fence_check.in
fence/fence_node/: Makefile  fence_node.c
fence/fence_tool/: Makefile
fence/fenced/: Makefile  config.c  config.h  cpg.c  dbus.c  fd.h  logging.c  main.c  member_cman.c  recover.c
fence/libfence/: agent.c  libfence.h
fence/man/: Makefile  fence_check.8  fenced.8
group/: Makefile  Makefile.am
group/daemon/: Makefile
group/dlm_controld/: Makefile  action.c  cpg.c  main.c  plock.c
group/lib/: Makefile
group/man/: Makefile  Makefile.am
group/tool/: Makefile  Makefile.am  main.c
make/: clean.mk  cobj.mk  defines.mk.input  install.mk  lcrso.mk  libs.mk  release.mk  uninstall.mk
rgmanager/include/: cpglock-internal.h  event.h  list.h  lock.h  members.h  reslist.h  rg_dbus.h
rgmanager/init.d/: Makefile  cpglockd.in  cpglockd.init.defaults.in  rgmanager.in
rgmanager/man/: Makefile  cpglockd.8  rgmanager.8
rgmanager/src/: Makefile
rgmanager/src/clulib/: Makefile  cpg_lock.c  daemon_init.c  dlm_lock.c  libcpglock.c  lock.c  members.c  msg_cluster.c  msg_socket.c  vft.c
rgmanager/src/daemons/: Makefile  cpglockd.c  cpglockdump.c  fo_domain.c  groups.c  main.c  reslist.c  resrules.c  restree.c  rg_event.c  rg_state.c  rg_thread.c  service_op.c  slang_event.c  test-expand-time.c  update-dbus.c
rgmanager/src/resources/: default_event_script.sl  follow-service.sl
rgmanager/src/utils/: Makefile  clustat.c
